2003-02-01  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(clean): Remove alldifs and log files.

	* tlog.adb:
	Use 2 simultaneous connection. Fix a regression on GNU/Linux. This
	 should be certainly analysed at some point. The problem was that
	 the log output was not in the same order.
	
	* makefile:
	(check_mem): New target.
	Better handle error checking.

	* check_mem.adb:
	Initial revision.

2003-02-01  Pascal Obry  <p.obry@wanadoo.fr>

	* unexph2.adb:
	Use port 1247 as 1240 was already used. Fix GNU/Linux failure.

	* makefile:
	(ALL_TESTS): Do not stop if diff report an error here.

2003-02-01  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(ALL_EXEC): New variable.
	(clean): Use it to remove the executable. Use rm -f to avoid warnings.

	* tres2.adb:
	Fix cut&past error.

	* makefile:
	(build): Add $(ALL_TESTS), do not use loop.
	(checks_out): Do not use loop.
	(ALL_TESTS): New targets, does all the job here.
	

2003-02-01  Pascal Obry  <p.obry@wanadoo.fr>

	* tres2.adb:
	Delete file after use.

	* tlog.out:
	Update output to new stable format.
	
	* tlog.adb:
	(Create_File): New routine.
	Update again this regtest to be OS independant. The filename was
	 not having the same size on GNU/Linux.

2003-02-01  Pascal Obry  <p.obry@wanadoo.fr>

	* tlog.out:
	Update output to new stable format.

	* tlog.adb:
	Removes date from filename to have a stable output.

2003-01-31  Pascal Obry  <p.obry@wanadoo.fr>

	* unexph2.adb:
	Remove traceback info to have a stable output.
	
	* unexph2.out:
	Update output to new stable format.

2003-01-31  Pascal Obry  <p.obry@wanadoo.fr>

	* tlog.out:
	Fix output. New tlog.adb line reference due to change in tlog.adb.

	* tlog.adb:
	Change test to not output target/compiler's version dependant output.

	* makefile:
	(RT_STD): Add unexph2.
	
	* unexph2.adb, unexph2.out:
	Initial revision.

2003-01-31  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(RT_STD): Add tlog.

	* tlog.adb, tlog.out:
	Initial revision.
